# ndiofork

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  ramondata.xlsx  setup.py
mossmetadataintegration/: neurodata
ndio/: data.xlsx  db.py  endpoints.py  main.py  utils.py
ndio/ramon/: RAMONSegment.py  RAMONSubcellular.py  RAMONSynapse.py  __init__.py
ndio/templates/: home.html
