[tool.poetry]
name = "bossdbmetadata"
version = "0.1.0"
description = "A metadata store for BossDB+BICCN."
authors = ["Jordan Matelsky <jordan.matelsky@jhuapl.edu>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.2"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
pandas = "^1.5.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Run the flask server in bbmeta.main:app with `poetry run server`:
[tool.poetry.scripts]
server = "bbmeta.main:app"